<resources>
    <string name="app_name">Petcare</string>
    <string name="petcare">PetCare</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
<!--    <string name="sign_up">Sign up</string>-->
<!--    <string name="sign_up">Sign up</string>-->

    <string-array name="account_types">
        <item>normal user</item>
        <item>doctor</item>
    </string-array>

</resources>